package seedu.address.ui;

import java.util.logging.Logger;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.MenuItem;
import javafx.scene.control.TextInputControl;
import javafx.scene.input.KeyCombination;
import javafx.scene.input.KeyEvent;
import javafx.scene.layout.StackPane;
import javafx.stage.Stage;
import seedu.address.commons.core.GuiSettings;
import seedu.address.commons.core.LogsCenter;
import seedu.address.logic.Logic;
import seedu.address.logic.commands.CommandResult;
import seedu.address.logic.commands.exceptions.CommandException;
import seedu.address.logic.parser.exceptions.ParseException;

/**
 * The Main Window. Provides the basic application layout containing a menu bar and space where
 * other JavaFX elements can be placed.
 */
public class MainWindow extends UiPart<Stage> {

    private static final String FXML = "MainWindow.fxml";

    private final Logger logger = LogsCenter.getLogger(getClass());

    private Stage primaryStage;
    private Logic logic;

    // Independent Ui parts residing in this Ui container
    private PlaceListPanel placeListPanel;
    private ActivityListPanel activityListPanel;
    private RecentEventPanel recentEventPanel;
    private PersonListPanel personListPanel;
    private GroupListPanel groupListPanel;
    private SuggestListPanel suggestListPanel;
    private ResultDisplay resultDisplay;
    private HelpWindow helpWindow;
    private TimePieChart timePieChart;
    private AllEventPanel allEventPanel;

    @FXML
    private StackPane commandBoxPlaceholder;

    @FXML
    private MenuItem helpMenuItem;

    @FXML
    private StackPane personListPanelPlaceholder;

    @FXML
    private StackPane groupListPanelPlaceholder;

    @FXML
    private StackPane frequencyListPanelPlaceholder;

    @FXML
    private StackPane resultDisplayPlaceholder;

    @FXML
    private StackPane statusbarPlaceholder;

    @FXML
    private StackPane timePieChartPanelPlaceholder;

    public MainWindow(Stage primaryStage, Logic logic) {
        super(FXML, primaryStage);

        // Set dependencies
        this.primaryStage = primaryStage;
        this.logic = logic;

        // Configure the UI
        setWindowDefaultSize(logic.getGuiSettings());

        setAccelerators();

        helpWindow = new HelpWindow();
    }

    public Stage getPrimaryStage() {
        return primaryStage;
    }

    private void setAccelerators() {
        setAccelerator(helpMenuItem, KeyCombination.valueOf("F1"));
    }

    /**
     * Sets the accelerator of a MenuItem.
     *
     * @param keyCombination the KeyCombination value of the accelerator
     */
    private void setAccelerator(MenuItem menuItem, KeyCombination keyCombination) {
        menuItem.setAccelerator(keyCombination);

        /*
         * TODO: the code below can be removed once the bug reported here
         * https://bugs.openjdk.java.net/browse/JDK-8131666
         * is fixed in later version of SDK.
         *
         * According to the bug report, TextInputControl (TextField, TextArea) will
         * consume function-key events. Because CommandBox contains a TextField, and
         * ResultDisplay contains a TextArea, thus some accelerators (e.g F1) will
         * not work when the focus is in them because the key event is consumed by
         * the TextInputControl(s).
         *
         * For now, we add following event filter to capture such key events and open
         * help window purposely so to support accelerators even when focus is
         * in CommandBox or ResultDisplay.
         */
        getRoot()
                .addEventFilter(
                        KeyEvent.KEY_PRESSED,
                    event -> {
                        if (event.getTarget() instanceof TextInputControl && keyCombination.match(event)) {
                            menuItem.getOnAction().handle(new ActionEvent());
                            event.consume();
                        }
                    });
    }

    /**
     * Fills up all the placeholders of this window.
     */
    void fillInnerParts() {
        personListPanel = new PersonListPanel(logic.getFilteredPersonList());
        personListPanelPlaceholder.getChildren().add(personListPanel.getRoot());

        timePieChart = new TimePieChart(logic.getTimeList(), logic.getFilteredGroupList(),
                logic.getFilteredPersonList());
        timePieChartPanelPlaceholder.getChildren().add(timePieChart.getRoot());

        groupListPanel = new GroupListPanel(logic.getFilteredGroupList());
        groupListPanelPlaceholder.getChildren().add(groupListPanel.getRoot());

        resultDisplay = new ResultDisplay();
        resultDisplayPlaceholder.getChildren().add(resultDisplay.getRoot());

        StatusBarFooter statusBarFooter = new StatusBarFooter(logic.getAddressBookFilePath());
        statusbarPlaceholder.getChildren().add(statusBarFooter.getRoot());

        CommandBox commandBox = new CommandBox(this::executeCommand);
        commandBoxPlaceholder.getChildren().add(commandBox.getRoot());
    }

    /**
     * Sets the default size based on {@code guiSettings}.
     */
    private void setWindowDefaultSize(GuiSettings guiSettings) {
        primaryStage.setHeight(guiSettings.getWindowHeight());
        primaryStage.setWidth(guiSettings.getWindowWidth());
        if (guiSettings.getWindowCoordinates() != null) {
            primaryStage.setX(guiSettings.getWindowCoordinates().getX());
            primaryStage.setY(guiSettings.getWindowCoordinates().getY());
        }
    }

    /**
     * Opens the help window or focuses on it if it's already opened.
     */
    @FXML
    public void handleHelp() {
        if (!helpWindow.isShowing()) {
            helpWindow.show();
        } else {
            helpWindow.focus();
        }
    }

    void show() {
        primaryStage.show();
    }

    /**
     * Closes the application.
     */
    @FXML
    private void handleExit() {
        GuiSettings guiSettings =
                new GuiSettings(
                        primaryStage.getWidth(),
                        primaryStage.getHeight(),
                        (int) primaryStage.getX(),
                        (int) primaryStage.getY());
        logic.setGuiSettings(guiSettings);
        helpWindow.hide();
        primaryStage.hide();
    }

    private void handleViewPlaces() {
        placeListPanel = new PlaceListPanel(logic.getFrequencyList());
        timePieChartPanelPlaceholder.getChildren().clear();
        timePieChartPanelPlaceholder.getChildren().add(placeListPanel.getRoot());
    }

    private void handleViewActivities() {
        activityListPanel = new ActivityListPanel(logic.getFrequencyList());
        timePieChartPanelPlaceholder.getChildren().clear();
        timePieChartPanelPlaceholder.getChildren().add(activityListPanel.getRoot());
    }

    private void handleViewRecent() {
        recentEventPanel = new RecentEventPanel(logic.getRecentList());
        timePieChartPanelPlaceholder.getChildren().clear();
        timePieChartPanelPlaceholder.getChildren().add(recentEventPanel.getRoot());
    }

    private void handleViewAll() {
        allEventPanel = new AllEventPanel(logic.getRecentList());
        timePieChartPanelPlaceholder.getChildren().clear();
        timePieChartPanelPlaceholder.getChildren().add(allEventPanel.getRoot());
    }

    /**
     * Displays pie chart
     */
    private void handleViewTime() {
        timePieChart = new TimePieChart(logic.getTimeList(), logic.getFilteredGroupList(),
                logic.getFilteredPersonList());
        timePieChartPanelPlaceholder.getChildren().clear();
        timePieChartPanelPlaceholder.getChildren().add(timePieChart.getRoot());
    }

    /**
     * Displays suggest activity
     */
    private void handleSuggestActivity() {
        suggestListPanel = new SuggestListPanel(logic.getFilteredEventList());
        timePieChartPanelPlaceholder.getChildren().clear();
        timePieChartPanelPlaceholder.getChildren().add(suggestListPanel.getRoot());
    }

    /**
     * Displays suggest place
     */
    private void handleSuggestPlace() {
        suggestListPanel = new SuggestListPanel(logic.getFilteredEventList());
        timePieChartPanelPlaceholder.getChildren().clear();
        timePieChartPanelPlaceholder.getChildren().add(suggestListPanel.getRoot());
    }


    /**
     * Displays group list
     */
    private void handleGroup() {
        groupListPanel = new GroupListPanel(logic.getFilteredGroupList());
        groupListPanelPlaceholder.getChildren().clear();
        groupListPanelPlaceholder.getChildren().add(groupListPanel.getRoot());
        handleViewTime();
    }

    /**
     * Displays normal display
     */
    private void handleNormal() {
        personListPanelPlaceholder.getChildren().clear();
        personListPanelPlaceholder.getChildren().add(personListPanel.getRoot());
        groupListPanelPlaceholder.getChildren().clear();
        groupListPanelPlaceholder.getChildren().add(groupListPanel.getRoot());
        handleViewTime();
    }

    public PersonListPanel getPersonListPanel() {
        return personListPanel;
    }

    public GroupListPanel getGroupListPanel() {
        return groupListPanel;
    }

    /**
     * Executes the command and returns the result.
     *
     * @see seedu.address.logic.Logic#execute(String)
     */
    private CommandResult executeCommand(String commandText) throws CommandException, ParseException {
        try {
            CommandResult commandResult = logic.execute(commandText);
            resultDisplay.setFeedbackToUser(commandResult.getFeedbackToUser());
            switch (commandResult.getViewType()) {
            case HELP:
                handleHelp();
                break;
            case EXIT:
                handleExit();
                break;
            case PLACES:
                handleViewPlaces();
                break;
            case ACTIVITIES:
                handleViewActivities();
                break;
            case TIME:
                handleViewTime();
                break;
            case RECENT:
                handleViewRecent();
                break;
            case ALL:
                handleViewAll();
                break;
            case GROUPS:
                handleGroup();
                break;
            case SUGGEST_ACTIVITY:
                handleSuggestActivity();
                break;
            case SUGGEST_PLACE:
                handleSuggestPlace();
                break;
            default:
                handleNormal();
            }
            return commandResult;

        } catch (CommandException | ParseException e) {
            logger.info("Invalid command: " + commandText);
            resultDisplay.setFeedbackToUser(e.getMessage());
            throw e;
        }
    }
}
